# mock-mcp-server

./: CHANGELOG.md  README.md  pyproject.toml
src/mock_mcp_server/: main.py
