[project]
name = "mock-mcp-server"
version = "0.1.0"
description = "A mock mcp server for test."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.2",
    "typer>=0.20.0",
]

[project.scripts]
mock-mcp-server = "mock_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

